[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/actors/Torch.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/base_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://assets/images/ui/pause.png" type="Texture" id=4]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/actors/Lifebar.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/images/background.png" type="Texture" id=7]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/scripts/Level.gd" type="Script" id=9]
[ext_resource path="res://assets/images/coin_rotated.png" type="Texture" id=10]
[ext_resource path="res://assets/font/Overpass-Bold_24.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/font/Overpass-Regular_18.tres" type="DynamicFont" id=12]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 24, -32, 24, 608, 0, 608, 0, -32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 208, 16 )

[sub_resource type="Animation" id=4]
resource_name = "alert_off"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.392157, 0, 0, 0.0784314 ), Color( 0.392157, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "alert_on"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.392157, 0, 0, 0 ), Color( 0.392157, 0, 0, 0.392157 ), Color( 0.392157, 0, 0, 0.196078 ), Color( 0.392157, 0, 0, 0.392157 ), Color( 0.392157, 0, 0, 0.0784314 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 104, 276 )

[node name="Level" type="Node2D"]
script = ExtResource( 9 )

[node name="Timers" type="Node2D" parent="."]

[node name="ResumeTimer" type="Timer" parent="Timers"]

[node name="BonusTimer" type="Timer" parent="Timers"]

[node name="RainStartTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="RainSpawnTimer" type="Timer" parent="Timers"]

[node name="RainStopTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="RainRewardTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="background" type="Sprite" parent="."]
position = Vector2( 208, 304 )
texture = ExtResource( 7 )

[node name="Torches" type="Node2D" parent="."]

[node name="Torch1" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 40, 120 )

[node name="Torch2" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 376, 192 )

[node name="Torch3" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 40, 320 )

[node name="Torch4" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 376, 384 )

[node name="Bonus" type="Node2D" parent="."]

[node name="Coins" type="Node2D" parent="."]

[node name="EnemyRain" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="World" type="Node2D" parent="."]

[node name="LightOccluder2D_Right" type="LightOccluder2D" parent="World"]
position = Vector2( 392, 0 )
occluder = SubResource( 1 )

[node name="LightOccluder2D_Left" type="LightOccluder2D" parent="World"]
occluder = SubResource( 1 )

[node name="LimiterUp" type="TileMap" parent="World"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 6, 0, -65524, 6, 0, 0, 6, 0, 12, 6, 0, 65536, 6, 0, 65548, 6, 0 )

[node name="TileMap" type="TileMap" parent="World"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -786432, 2, 0, -786420, 4, 0, -720896, 2, 0, -720884, 4, 0, -655360, 2, 0, -655348, 4, 0, -589824, 2, 0, -589812, 4, 0, -524288, 2, 0, -524276, 4, 0, -458752, 2, 0, -458740, 4, 0, -393216, 2, 0, -393204, 4, 0, -327680, 2, 0, -327668, 4, 0, -262144, 2, 0, -262132, 4, 0, -196608, 2, 0, -196596, 4, 0, -131072, 2, 0, -131060, 4, 0, -65536, 2, 0, -65524, 4, 0, 0, 2, 0, 12, 4, 0, 65536, 2, 0, 65548, 4, 0, 131072, 2, 0, 131084, 4, 0, 196608, 2, 0, 196620, 4, 0, 262144, 2, 0, 262156, 4, 0, 327680, 2, 0, 327692, 4, 0, 393216, 2, 0, 393228, 4, 0, 458752, 2, 0, 458764, 4, 0, 524288, 2, 0, 524300, 4, 0, 589824, 2, 0, 589836, 4, 0, 655360, 2, 0, 655372, 4, 0, 720896, 2, 0, 720908, 4, 0, 786432, 2, 0, 786444, 4, 0, 851968, 2, 0, 851980, 4, 0, 917504, 2, 0, 917516, 4, 0, 983040, 2, 0, 983052, 4, 0, 1048576, 2, 0, 1048588, 4, 0, 1114112, 2, 0, 1114124, 4, 0, 1179648, 2, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 4, 0, 1245184, 6, 0, 1245185, 6, 0, 1245186, 6, 0, 1245187, 6, 0, 1245188, 6, 0, 1245189, 6, 0, 1245190, 6, 0, 1245191, 6, 0, 1245192, 6, 0, 1245193, 6, 0, 1245194, 6, 0, 1245195, 6, 0, 1245196, 6, 0 )

[node name="LavaDetector" type="Area2D" parent="World"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/LavaDetector"]
position = Vector2( 208, 600 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 247, 272 )
collision_mask = 24

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 416.0
margin_bottom = 608.0
rect_min_size = Vector2( 416, 608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Label" parent="Control"]
anchor_right = 1.0
margin_left = 64.0
margin_top = 97.0
margin_right = -64.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 12 )
text = "INSTRUCTION_PLAY"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeCounter" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -32.0
margin_right = 152.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifebar" parent="Control" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_left = 35.0
margin_top = 8.0
margin_right = 140.0
margin_bottom = 36.0

[node name="ScoreContainer" type="GridContainer" parent="Control"]
light_mask = 0
margin_left = 40.0
margin_top = 49.0
margin_right = 116.0
margin_bottom = 65.0
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="TextureRect" parent="Control/ScoreContainer"]
light_mask = 0
margin_right = 20.0
margin_bottom = 26.0
texture = ExtResource( 10 )

[node name="ValueScore" type="Label" parent="Control/ScoreContainer"]
light_mask = 0
margin_left = 28.0
margin_top = 6.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 14 )
text = "0"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="Control" parent="Control/ScoreContainer"]
margin_top = 30.0
margin_right = 20.0
margin_bottom = 44.0

[node name="ValueScoreMax" type="Label" parent="Control/ScoreContainer"]
margin_left = 28.0
margin_top = 30.0
margin_right = 68.0
margin_bottom = 44.0
text = "0"

[node name="Warning" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Warning"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 94.0
margin_right = 176.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.588235, 0.117647, 0.117647, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "LABEL_WARNING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/Warning"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningAnimation" type="AnimationPlayer" parent="Control/Warning/ColorRect"]
anims/alert_off = SubResource( 4 )
anims/alert_on = SubResource( 5 )

[node name="PauseButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_right = -32.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchLeft" type="TouchScreenButton" parent="Control"]
position = Vector2( 0, 64 )
shape = SubResource( 3 )

[node name="TouchRight" type="TouchScreenButton" parent="Control"]
position = Vector2( 208, 64 )
shape = SubResource( 3 )

[node name="FadeTransition" parent="Control" instance=ExtResource( 5 )]
visible = false

[node name="PauseMenu" type="Popup" parent="."]
pause_mode = 2
light_mask = 0
margin_right = 416.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseMenu"]
modulate = Color( 1, 1, 1, 0.627451 )
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -176.0
margin_right = 136.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
light_mask = -2147483647
margin_right = 272.0
margin_bottom = 384.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 8 )
text = "TITLE_PAUSE"
align = 1
valign = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 272.0
margin_bottom = 60.0

[node name="ResumeButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
light_mask = 0
margin_top = 70.0
margin_right = 272.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 40 )
mouse_default_cursor_shape = 2
text = "BUTTON_RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
light_mask = 0
margin_top = 120.0
margin_right = 272.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 40 )
mouse_default_cursor_shape = 2
text = "BUTTON_RESTART"

[node name="MainMenuButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
light_mask = 0
margin_top = 170.0
margin_right = 272.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 40 )
mouse_default_cursor_shape = 2
text = "BUTTON_MAINMENU"
[connection signal="timeout" from="Timers/ResumeTimer" to="." method="_on_ResumeTimer_timeout"]
[connection signal="timeout" from="Timers/BonusTimer" to="." method="_on_BonusTimer_timeout"]
[connection signal="timeout" from="Timers/RainStartTimer" to="." method="_on_RainStartTimer_timeout"]
[connection signal="timeout" from="Timers/RainSpawnTimer" to="." method="_on_RainSpawnTimer_timeout"]
[connection signal="timeout" from="Timers/RainStopTimer" to="." method="_on_RainStopTimer_timeout"]
[connection signal="timeout" from="Timers/RainRewardTimer" to="." method="_on_RainRewardTimer_timeout"]
[connection signal="body_entered" from="World/LavaDetector" to="." method="_on_LavaDetector_body_entered"]
[connection signal="first_jump" from="Player" to="." method="_on_Player_first_jump"]
[connection signal="lose_life" from="Player" to="." method="_on_Player_lose_life"]
[connection signal="animation_finished" from="Control/Warning/ColorRect/WarningAnimation" to="." method="_on_WarningAnimation_animation_finished"]
[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Control/TouchLeft" to="." method="_on_TouchLeft_pressed"]
[connection signal="pressed" from="Control/TouchRight" to="." method="_on_TouchRight_pressed"]
[connection signal="animation_finished" from="Control/FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
